--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
     "unist-util-visit": "^5.0.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.45.1"
   }
 }
