--- a/package.json
+++ b/package.json
@@ -67,5 +67,9 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.45.1"
-  }
+  },
+  "trustedDependencies": [
+    "sharp"
+  ]
+
 }
